ENTITY-010 ENTITY-012 ENTITY-030 PARAM-006 Entity のカラムごとにnull 許容を表現する
パッケージ単位の @NullUnmarked をやめ、カラムの定義から非null かどうかを決める
not null 制約とリテラルの既定値を持ち、dbDeterminedColumnsByTable に未登録の
カラムだけを非null とし、数値と真偽はプリミティブにする
初期値にはDB の既定値を写す。値を捏造しない

既定値は「クォート済みリテラル」と「数値・真偽のリテラル」だけを受け入れる
関数呼び出しを検出するのではなく、知っている形以外を変換しない方式にする
形が合っていても変換に失敗する値は、生成時に検出して @Nullable に落とす

returningColumnsByTable をdbDeterminedColumnsByTable へ改名する
useNullMarked を廃止し、@Nullable を常時出力する
entity パッケージのpackage-info.java を生成しなくなる

検証用DDL にprimitive_default を追加し、プリミティブ化と既定値変換を押さえる
README の4章に例題テーブルと発行されるSQL を載せ、v4 の新API へ書き換える
CHANGELOG に4.0.0 の破壊的変更を追記する

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>